# termux-camera-yolo

./: .gitignore  README.md  SKILL.md  camera_yolo_logger.toml  install.sh  pyproject.toml  requirements.txt
camera_yolo_logger/: __init__.py  __main__.py  capture.py  config.py  detect.py  main.py  monitor.py  motion.py  notify.py  schemas.py  server.py  setup.py  utils.py
tests/: conftest.py  test_capture.py  test_config.py  test_detect.py  test_main.py  test_monitor.py  test_motion.py  test_notify.py  test_schemas.py  test_server.py  test_utils.py
