[project]
name = "camera-yolo-logger"
version = "1.1.0"
description = "Termux 专用 YOLO 物体检测拍照工具 — CLI / Monitor / HTTP API"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "onnxruntime>=1.15",
    "pillow>=10.0",
]

[project.optional-dependencies]
server = ["flask>=3.0"]
webhook = ["requests>=2.28"]

[project.scripts]
camera-yolo = "camera_yolo_logger.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-v", "--tb=short"]
